# inzynierka

./: CMakeLists.txt  ICP.cpp  concatenate.cpp  depth2pcd.cpp  graber.cpp  graberStary.cpp  importPcl.cpp  mnozenie.cpp  pcl2tree.cpp  rastrowa.cpp  sum_pcd.cpp  umeyama.cpp  visualizer.cpp
